Add materialize cards to list view

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="section">
 
-{{ partial "content.html" . }}
+{{ partial "list_content.html" . }}
 
 {{ partial "pagination.html" .Paginator }}
 
