--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,8 +3,8 @@
 <div class="container">
   <div class="section">
 
-{{ partial "content.html" . }}
-  
+{{ partial "list_content.html" . }}
+
 {{ partial "pagination.html" .Paginator }}
 
   </div>
