--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,17 @@
-{{ partial "header.html" . }}
-
-<div class="container">
-  <div class="section">
-
-{{ partial "list_content.html" . }}
-
-{{ partial "pagination.html" .Paginator }}
-
+<!DOCTYPE html>
+<html lang="{{.Site.LanguageCode}}">
+<head>
+  {{ partial "head.html" . }}
+</head>
+<body>
+  {{ partial "nav.html"}}
+  {{ partial "parallax.html"}}
+  <div class="container">
+    <div class="section">
+    {{ partial "list_content.html" . }}
+    {{ partial "pagination.html" .Paginator }}
+    </div>
   </div>
-</div>
-
-{{ partial "footer.html" . }}
+  {{ partial "footer.html" . }}
+</body>
+</html>
