--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,6 +9,11 @@
   <script src="{{.Site.BaseURL}}/js/materialize.min.js"></script>
   <script src="{{.Site.BaseURL}}/js/init.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script>
+    hljs.initHighlightingOnLoad();
+    $(document).ready(function(){
+      $('.scrollspy').scrollSpy();
+      });
+    </script>
   </body>
 </html>
