--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,62 @@
 /* Custom Stylesheet */
+@font-face {
+    font-family: 'Roboto';
+    src: url('/font/roboto/Roboto-Regular.eot');
+    src: url('/font/roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+         url('/font/roboto/Roboto-Regular.woff') format('woff'),
+         url('/font/roboto/Roboto-Regular.ttf') format('truetype'),
+         url('/font/roboto/Roboto-Regular.svg#RobotoRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/font/roboto/Roboto-Bold.eot');
+    src: url('/font/roboto/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+         url('/font/roboto/Roboto-Bold.woff') format('woff'),
+         url('/font/roboto/Roboto-Bold.ttf') format('truetype'),
+         url('/font/roboto/Roboto-Bold.svg#RobotoBold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/font/roboto/Roboto-Thin.eot');
+    src: url('/font/roboto/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+         url('/font/roboto/Roboto-Thin.woff') format('woff'),
+         url('/font/roboto/Roboto-Thin.ttf') format('truetype'),
+         url('/font/roboto/Roboto-Thin.svg#RobotoThin') format('svg');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/font/roboto/Roboto-Light.eot');
+    src: url('/font/roboto/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+         url('/font/roboto/Roboto-Light.woff') format('woff'),
+         url('/font/roboto/Roboto-Light.ttf') format('truetype'),
+         url('/font/roboto/Roboto-Light.svg#RobotoLight') format('svg');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/font/roboto/Roboto-Medium.eot');
+    src: url('/font/roboto/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+         url('/font/roboto/Roboto-Medium.woff') format('woff'),
+         url('/font/roboto/Roboto-Medium.ttf') format('truetype'),
+         url('/font/roboto/Roboto-Medium.svg#RobotoMedium') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+body {
+  font-family: 'Roboto';
+}
 
 h1{
   font-size: 2rem;
@@ -26,7 +84,11 @@ li code{
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #f0f0f0;
+  margin: 40px 0 20px 0;
+  background-color: #292b36;
+  color: #ffffff;
+  border-radius: 6px;
+  border: 1px solid rgba(0,0,0,0.15);
 }
 
 hr {
@@ -185,3 +247,12 @@ tbody tr:last-child td {
   background-color: white;
 }
 
+a.chip{
+  color: #fff !important;
+}
+
+.card.small .card-content,
+.card.medium .card-content,
+.card.large .card-content {
+  max-height: 70% !important;
+}
